--- a/1-analyses/germband-cauterizations/wtdepth.Rmd
+++ b/1-analyses/germband-cauterizations/wtdepth.Rmd
@@ -66,12 +66,10 @@ pulling it up in the control, and one embryo where there's a big difference betw
 left and right furrow lengths.
 
 ```{r depth-ind}
-set.seed(111111)
 # Plot mean length of cephalic furrow per embryo (right/left sides)
 ggplot(results, aes(factor(Sample, level = c("control", "cauterized")), Length, fill = Sample)) +
-  geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, scale = "area", adjust = 2) +
-  geom_quasirandom(size = 2, width = 0.2, alpha = 0.8, show.legend = FALSE) +
-  #geom_jitter(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
+  geom_boxplot(show.legend = FALSE, alpha = 0.7, outlier.shape = NA, width = 0.6, position = position_dodge(width = 0.75)) +
+  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 0.75, cex = 5)) +
   labs(x = "sample", y = "depth (µm)") +
   facet_wrap(~Stock) +
   scale_fill_manual(values=c("#e69f03", "#56b4e9")) +
@@ -123,20 +121,13 @@ it's some evidence the germ band may push the cephalic furrow slightly.
 
 
 ```{r depth-mean}
-set.seed(1234)
 # Plot mean length of cephalic furrow per embryo (right/left sides)
 ggplot(means, aes(factor(Sample, level = c("control", "cauterized")), Mean, fill = Sample)) +
-  #geom_violin(draw_quantiles = c("0.5"), show.legend = FALSE, trim = TRUE, alpha = 0.7, scale = "area", adjust = 2) +
-  geom_bar(stat = "summary", fun = "mean", alpha = 0.7, width = 0.5, show.legend = FALSE) +
-  #geom_quasirandom(size = 2, width = 0.1, alpha = 0.9, show.legend = FALSE) +
-  #geom_errorbar(aes(ymin=Mean-SD, ymax=Mean+SD), show.legend = FALSE)+
-  #geom_jitter(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
-  #geom_point(alpha = 0.8, width = 0.1, size = 2, show.legend = FALSE) +
-  #geom_pointrange(aes(ymin=Mean-SD, ymax=Mean+SD), position = position_jitterdodge(jitter.width = 0.3), show.legend = FALSE)+
-  geom_pointrange(aes(ymin=Mean-SD, ymax=Mean+SD), position = position_quasirandom(width = 0.15, bandwidth = 0.1), show.legend = FALSE) +
+  geom_boxplot(show.legend = FALSE, alpha = 0.7, outlier.shape = NA, width = 0.6, position = position_dodge(width = 0.75)) +
+  geom_point(alpha = 0.8, size = 2, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 0.75, cex = 5)) +
+  #geom_pointrange(aes(ymin=Mean-SD, ymax=Mean+SD), alpha = 0.8, size = 0.5, show.legend = FALSE, position = position_quasirandom(dodge.width = 0.75)) +
   labs(x = "condition", y = "depth (µm)") +
   scale_fill_manual(values=c("#e69f03", "#56b4e9")) +
-  scale_y_continuous(limits = c(0, 70)) +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 25),
         panel.background = element_rect(colour = "black", size=1))
