--- a/1-analyses/germband-extension/germband.Rmd
+++ b/1-analyses/germband-extension/germband.Rmd
@@ -185,7 +185,7 @@ ggplot(gblong, aes(stock, gb_pct, fill = zygosity)) +
   labs(title = "Ectopic folding by germ band position",
        x = "stocks", y = "germ band extension (%)") +
   facet_grid(rows = vars(status), cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         title = element_text(size = 15),
         legend.text = element_text(size = 15),
@@ -207,7 +207,7 @@ ggplot(gblong, aes(stock, gb_time, fill = zygosity)) +
   labs(title = "Ectopic folding by time after gastrulation",
        x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(rows = vars(status), cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         title = element_text(size = 15),
         legend.text = element_text(size = 15),
@@ -232,7 +232,7 @@ ggplot(gblong[gblong$status == "buck",], aes(stock, gb_pct, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
@@ -251,7 +251,7 @@ ggplot(gblong[gblong$status == "buck",], aes(stock, gb_time, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         strip.background = element_blank(),
         panel.background = element_rect(colour = "black", size=1)
@@ -272,7 +272,7 @@ ggplot(gblong[gblong$status == "buck",], aes(stock, gb_pct, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         #title = element_text(size = 15),
         #legend.text = element_text(size = 15),
@@ -293,7 +293,7 @@ ggplot(gblong[gblong$status == "buck",], aes(stock, gb_time, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         #title = element_text(size = 15),
         #legend.text = element_text(size = 15),
@@ -316,7 +316,7 @@ ggplot(gblong[gblong$status == "deep",], aes(stock, gb_pct, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "germ band extension (%)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         #title = element_text(size = 15),
         #legend.text = element_text(size = 15),
@@ -335,7 +335,7 @@ ggplot(gblong[gblong$status == "deep",], aes(stock, gb_time, fill = zygosity)) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   labs(x = "stocks", y = "time after gastrulation (min)") +
   facet_grid(cols = vars(stock), scales = "free") +
-  theme_classic() +
+  theme_classic(base_family = "DejaVu Sans") +
   theme(text = element_text(size = 35),
         #title = element_text(size = 15),
         #legend.text = element_text(size = 15),
