--- a/1-analyses/folded-area/area.Rmd
+++ b/1-analyses/folded-area/area.Rmd
@@ -207,7 +207,6 @@ ggplot(total, aes(Stock, AreaCorr, fill = Genotype)) +
         )
 ggsave("4-plots/total-area-per-embryo.png", width = 12, height = 4)
 ggsave("4-plots/total-area-per-embryo.svg", width = 12, height = 4)
-
 ```
 
 ## Area of ectopic folds
@@ -250,26 +249,25 @@ ggplot(results, aes(Stock, AreaCorr, fill = Genotype)) +
         legend.text = element_text(size = 15),
         legend.title = element_text(size = 15),
         )
-ggsave("4-plots/area-individual-folds.png", width = 15, height = 8)
-ggsave("4-plots/area-individual-folds.svg", width = 15, height = 8)
+ggsave("4-plots/individual-area-per-position.png", width = 9, height = 4)
+ggsave("4-plots/individual-area-per-position.svg", width = 9, height = 4)
 ```
 
-```{r individual-area-per-ectopic-fold}
-ggplot(results, aes(Sample, AreaCorr, fill = Sample)) +
-  geom_boxplot(aes(color = Sample), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
-  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 2.5)) +
+```{r individual-area-per-type}
+ggplot(results, aes(Type, AreaCorr, fill = Genotype)) +
+  geom_boxplot(aes(color = Genotype), show.legend = FALSE, alpha = 0.5, outlier.shape = NA, width = 0.7, position = position_dodge(width = 1.0)) +
+  geom_point(alpha = 0.8, size = 3, show.legend = FALSE, position = position_beeswarm(priority = "descending", dodge.width = 1.0, cex = 6)) +
   scale_y_continuous(labels = function(x) x / 1000) +
   labs(x = "stocks", y = expression(paste("area ", (µm^2)~x~10^3))) +
+  facet_grid(cols = vars(Stock), scales = "free_x") +
   scale_fill_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   scale_color_manual(values=c("#56b4e9", "#e69f03", "#cc79a7")) +
   theme_classic(base_family = "DejaVu Sans") +
   theme(text =  element_text(size = 35),
         strip.background = element_blank(),
-        panel.background = element_rect(colour = "black", size=1)
+        panel.background = element_rect(colour = "black", size=1),
         )
-ggsave("4-plots/individual-area-per-ectopic-fold.png", width = 12, height = 6)
-ggsave("4-plots/individual-area-per-ectopic-fold.svg", width = 12, height = 6)
+ggsave("4-plots/individual-area-per-type.png", width = 12, height = 4)
+ggsave("4-plots/individual-area-per-type.svg", width = 12, height = 4)
 ```
-
-
 
